Trying to fix the z-index problem where multiple YUI autocompleters are stacked below each other. /Joakim

--- a/HsaTools/trunk/Search/composites/webcomp/src/main/resources/resources/styles/style.css
+++ b/HsaTools/trunk/Search/composites/webcomp/src/main/resources/resources/styles/style.css
@@ -477,3 +477,19 @@ div.autocomplete {
 	cursor: pointer;
 }
 /*--------------- END YUI AC */
+
+#administration_container {
+	z-index: 9003;
+}
+
+#profession_container {
+	z-index: 9002;
+}
+
+#specialityArea_container {
+	z-index: 9001;
+}
+
+#languageKnowledge_container {
+	z-index: 9000;
+}
